[package]
name = "ress-verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-primitives.workspace = true
ress-evm.workspace = true
ress-engine.workspace = true

# reth
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-trie.workspace = true
reth-trie-sparse.workspace = true
reth-trie-common.workspace = true
reth-errors.workspace = true
reth-provider.workspace = true
reth-node-ethereum.workspace = true
reth-revm.workspace = true

# kasplex-reth
kasplex-reth-chainspec.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true

# misc
rayon.workspace = true
itertools.workspace = true
thiserror.workspace = true
tracing.workspace = true

